--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-   "java.dependency.packagePresentation": "hierarchical"
+   "java.dependency.packagePresentation": "hierarchical",
+   "java.project.outputPath": "01.JAVA-Root\\JavaDefault\\bin"
 }
